tests/integration/snapshots/integration__common__object_missing_colon_with_leading_whitespace.snap
---
source: tests/integration/common.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
  {"hi"    
stdout --- 
<empty>
stderr --- 
error: expected colon after key, found no significant characters
 --> stdin:1:7
  |
1 |   {"hi"    
  |    ---^
  |    |
  |    expected due to `"hi"`
  |
help: insert colon, placeholder value, and closing curly brace
  |
1 |   {"hi": "garlic bread" }    
  |        ++++++++++++++++++
