tests/integration/snapshots/integration__common__object_missing_value.snap
---
source: tests/integration/common.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
{"hi":
stdout --- 
<empty>
stderr --- 
error: expected json value, found no significant characters
 --> stdin:1:6
  |
1 | {"hi":
  |      ^
  |      |
  |      expected due to `:`
  |
help: insert a placeholder value
  |
1 | {"hi": "rust is a must"
  |        ++++++++++++++++
