tests/integration/snapshots/integration__common__object_open_curly.snap
---
source: tests/integration/common.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
{
stdout --- 
<empty>
stderr --- 
error: expected entry or closed delimiter `}`, found no significant characters
 --> stdin:1:1
  |
1 | {
  | ^
  | |
  | expected due to `{`
  |
help: insert the missing closed delimiter `}`
  |
1 | {}
  |  +
