tests/integration/snapshots/integration__common__object_trailing_comma_with_closed.snap
---
source: tests/integration/common.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
{"hi": null, }
stdout --- 
<empty>
stderr --- 
error: expected key, found `}`
 --> stdin:1:14
  |
1 | {"hi": null, }
  |            - ^
  |            |
  |            expected due to `,`
  |
help: consider removing the trailing comma
  |
1 - {"hi": null, }
1 + {"hi": null }
  |
