tests/integration/snapshots/integration__common__object_with_adjacent_strings.snap
---
source: tests/integration/common.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
{"hi": "bye" "ferris": null
stdout --- 
<empty>
stderr --- 
error: expected comma or closed curly brace, found `"ferris"`
 --> stdin:1:14
  |
1 | {"hi": "bye" "ferris": null
  | -    ------- ^^^^^^^^
  | |    |
  | |    expected due to the preceding key/value pair
  | object opened here by `{`
  |
help: is "ferris" a key? consider adding a comma
  |
1 | {"hi": "bye", "ferris": null
  |             +
